# TerminalGame

./: .gitignore  build.bat
src/: CMakeLists.txt  Main.cpp  TankGame.cpp  TankGame.h
src/core/: Common.h  Game.cpp  Game.h  GameCore.cpp  GameCore.h  ITickable.h  Input.cpp  Input.h  Terminal.cpp  Terminal.h  TerminalController.cpp  TerminalController.h  Timer.h
src/gameplay/: Entity.cpp  Entity.h  Game.cpp  Game.h
src/scene/: Camera.cpp  Camera.h  Component.cpp  Component.h  HeroController.cpp  HeroController.h  Node.cpp  Node.h  Scene.cpp  Scene.h  Sprite.cpp  Sprite.h  Transform.cpp  Transform.h
src/utils/: Math.cpp  Math.h
src/view/: Appearance.cpp  Appearance.h  Element.cpp  Element.h  Terminal.cpp  Terminal.h  TerminalController.cpp  TerminalController.h
